--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -42,6 +42,7 @@
   padding-top: 1rem;
   display: grid;
   grid-template-columns: 20% 60% 20%;
+  grid-auto-flow: column;
 }
 
 .burger_title {
@@ -82,6 +83,5 @@
   .burger_title {
     grid-row: 1;
     font-size: 1.5rem;
-    grid-column: 2 / 6;
   }
 }
